<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>dev.thiagooliveira.tablesplit</groupId>
	<artifactId>parent</artifactId>
	<version>1.8.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>table-split</name>
	<description>TableSplit Multi-Module Project</description>

	<modules>
		<module>printagent</module>
		<module>webapp</module>
	</modules>

	<properties>
		<java.version>21</java.version>
		<spotless-maven-plugin.version>2.44.5</spotless-maven-plugin.version>
		<cloudinary-http44.version>1.39.0</cloudinary-http44.version>
		<testcontainers.version>1.21.4</testcontainers.version>
		<bcprov-jdk18on.version>1.80</bcprov-jdk18on.version>
		<nl.martijndwars.web-push.version>5.1.2</nl.martijndwars.web-push.version>
		<springdoc-openapi.version>2.8.5</springdoc-openapi.version>
		<openapi-generator-maven-plugin.version>7.11.0</openapi-generator-maven-plugin.version>
		<mapstruct.version>1.6.3</mapstruct.version>
		<maven-clean-plugin.version>3.5.0</maven-clean-plugin.version>

		<!-- SonarQube & JaCoCo Properties -->
		<sonar.host.url>http://localhost:9000</sonar.host.url>
		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.coverage.exclusions>
			**/config/**/*,
			**/*Config.java,
			**/spec/**/*,
			**/model/**/*,
			**/persistence/**/*,
			**/*Mapper*.java,
			**/*Exception.java,
			**/infrastructure/**/*,
			**/printagent/**/*,
			**/application/**/command/**/*,
			**/application/**/exception/**/*
		</sonar.coverage.exclusions>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${testcontainers.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.ai</groupId>
				<artifactId>spring-ai-bom</artifactId>
				<version>1.0.0-M2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>5.0.0.4389</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<configuration>
					<excludes>
						<exclude>**/config/**/*</exclude>
						<exclude>**/*Config.class</exclude>
						<exclude>**/spec/**/*</exclude>
						<exclude>**/model/**/*</exclude>
						<exclude>**/persistence/**/*</exclude>
						<exclude>**/*Mapper*.class</exclude>
						<exclude>**/*Exception.class</exclude>
						<exclude>**/infrastructure/**/*</exclude>
						<exclude>**/printagent/**/*</exclude>
						<exclude>**/application/**/command/**/*</exclude>
						<exclude>**/application/**/exception/**/*</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
